FAQ: match start and end tags.
	* doc/guide/faq.tex: End 'urbiscript' with 'urbiscript'.

--- a/doc/guide/faq.tex
+++ b/doc/guide/faq.tex
@@ -100,7 +100,7 @@ object, versus a local variable name:
 bar;
 foo;
 [00000001] 42
-\end{urbifixme}
+\end{urbiscript}
 
 
 \paragraph{How do I modify a slot of my object?}
