FAQ: add missing error message.
	* doc/guide/faq.tex: Here.

--- a/doc/guide/faq.tex
+++ b/doc/guide/faq.tex
@@ -98,6 +98,7 @@ object, versus a local variable name:
   var bar = 23;
 }|
 bar;
+[00000001:error] !!! lookup failed: bar
 foo;
 [00000001] 42
 \end{urbiscript}
