--- a/doc/urbi-report.sty
+++ b/doc/urbi-report.sty
@@ -42,6 +42,9 @@
 \newcommand{\urbi}{Urbi\xspace}
 \newcommand{\us}{urbiScript\xspace}
 
+
+\newtheorem{note}{Note}
+
 %% -------- %%
 %% Floats.  %%
 %% -------- %%
