--- a/doc/specs/lang.tex
+++ b/doc/specs/lang.tex
@@ -1868,8 +1868,8 @@ are supported.
 \end{urbiscript}
 
 
-\subsubsection{\lstinline'every;'}
-The default flavor, \lstinline|every;| launches the execution of the
+\subsubsection{\lstinline'every,'}
+The default flavor, \lstinline|every,| launches the execution of the
 block in the background every given period. Iterations may overlap.
 
 % Cut the previous every, no [firstnumber=last]
