--- a/doc/specs/tag.tex
+++ b/doc/specs/tag.tex
@@ -1,8 +1,8 @@
 \section{Tag}
 
-A Tag is an object which you can use to tag some blocs of code.
-Tagged code can be freezed, resumed, stopped\ldots See also
-\autoref{sec:tut:tags}.
+A Tag is an object which you can use to label blocks of code in order
+to control them externally.  Tagged code can be freezed, resumed,
+stopped\ldots See also \autoref{sec:tut:tags}.
 
 \subsection{Construction}
 \label{stdlib:tag:ctor}
@@ -22,11 +22,73 @@ var t2 = Tag.new("cool name");
 [00000001] Tag<cool name>
 \end{urbiscript}
 
+\subsection{Examples}
+
+\subsubsection{Block/unblock}
+\label{sec:specs:tag:block}
+
+To \dfn{block} a tag means:
+\begin{itemize}
+\item Stop running pieces of code it labels.
+\item Ignore new pieces of code it labels.
+\end{itemize}
+
+One can \dfn{unblock} the tag.  Contrary to
+\lstinline|freeze|/\lstinline|unfreeze|, tagged code does the resume
+the execution.
+
+
+\begin{urbiscript}
+var ping = Tag.new("ping")|;
+ping:
+  every (1s)
+    echo("ping"),
+assert(!ping.blocked);
+sleep(2.1s);
+[00000000] *** ping
+[00002000] *** ping
+
+ping.block;
+assert(ping.blocked);
+
+ping:
+  every (1s)
+    echo("pong"),
+
+// Neither new nor old code runs.
+ping.unblock;
+assert(!ping.blocked);
+sleep(2.1s);
+
+// But we can use the tag again.
+ping:
+  every (1s)
+    echo("ping again"),
+sleep(2.1s);
+[00004000] *** ping again
+[00005000] *** ping again
+[00006000] *** ping again
+\end{urbiscript}
+
 
 \subsection{Methods}
+
 \begin{itemize}
+\item \lstinline|block|~\\
+  Block any code tagged by \lstinline|this|.  Blocked code can be
+  later unblocked using \lstinline|Tag.unblock|.  See
+  \autoref{sec:specs:tag:block}.
+
+\item \lstinline|blocked|~\\
+  Whether code tagged by \lstinline|this| is blocked.  See
+  \autoref{sec:specs:tag:block}.
+
 \item \lstinline|stop|~\\
   Stop any code tagged by \lstinline|this|.
+
+\item \lstinline|unblock|~\\
+  Unblock any code tagged by \lstinline|this|.  See
+  \autoref{sec:specs:tag:block}.
 \end{itemize}
 
 %%% Local Variables:
