--- a/doc/specs/list.tex
+++ b/doc/specs/list.tex
@@ -135,7 +135,7 @@ assert([0, 1, 2, 3, 4, 5].filter(function (v) {v % 2 == 1}) == [1, 3, 5]);
 \end{urbiscript}
 
 \item \lstinline|foldl(\var{action}, \var{value})|\\
-  \href{http://en.wikipedia.org/wiki/Fold_(higher-order_function)}{Fold},
+  \wref[Fold_(higher-order_function)]{Fold},
   also known as \dfn{reduce} or \dfn{accumulate}, computes a result
   from a list.  Starting from \var{value} as the initial result, apply
   repeatedly the binary \var{action} to the current result and the
