doc: precision when formatting floats.
	* doc/specs/float.tex, doc/specs/formatinfo.tex: Document the
	meaning of "precision".
	Hightlight the difference between %d and %f.

--- a/doc/specs/float.tex
+++ b/doc/specs/float.tex
@@ -187,6 +187,20 @@ for (var x : 3) { echo(x); sleep(20ms); echo (100 + x); };
 [00000000] 2.71828
 \end{urbiscript}
 
+\item \lstinline|format(\var{finfo})|\\
+  Format according to the \refObject{FormatInfo} object \var{finfo}.
+  The precision, \lstinline|\var{finfo}.precision, sets the maximum
+  number of digits after decimal point when in fixed or scientific
+  mode, and in total when in default mode.  Beware that 0 plays a
+  special role, as it is not a ``significant'' digit.
+\begin{urbiscript}[firstnumber=last]
+assert("%1.0d" % 0.1 == "0.1");
+assert("%1.0d" % 1.1 == "1");
+
+assert("%1.0f" % 0.1 == "0");
+assert("%1.0f" % 1.1 == "1");
+\end{urbiscript}
+
 \item \lstinline|inf|\\
   Return the infinity.
 \begin{urbiscript}[firstnumber=last]
