--- a/doc/specs/float.tex
+++ b/doc/specs/float.tex
@@ -189,7 +189,7 @@ for (var x : 3) { echo(x); sleep(20ms); echo (100 + x); };
 
 \item \lstinline|format(\var{finfo})|\\
   Format according to the \refObject{FormatInfo} object \var{finfo}.
-  The precision, \lstinline|\var{finfo}.precision, sets the maximum
+  The precision, \lstinline|\var{finfo}.precision|, sets the maximum
   number of digits after decimal point when in fixed or scientific
   mode, and in total when in default mode.  Beware that 0 plays a
   special role, as it is not a ``significant'' digit.
